Vue part added
